--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">My Header</mat-toolbar>
+<app-header></app-header>
 <main>
-
   <app-post-create></app-post-create>
+<app-post-list></app-post-list>
 </main>
