--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -7,3 +7,24 @@
 
   text-align: center;
 }
+.example-button-row {
+  /*display: table-cell;*/
+  width: 100%;
+}
+
+.example-button-row .mat-button-base {
+  margin: 25px 8px 8px 0;
+}
+
+.example-flex-container {
+  direction: rtl;
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 80px;
+}
