--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,9 +1,24 @@
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-            {{post.title}}
+      {{post.title}}
     </mat-expansion-panel-header>
-        <p>{{post.content}}</p>
+    <p>{{post.content}}</p>
+    <hr>
+    <div class="example-button-row">
+      <div class="example-flex-container">
+        <div class="example-button-container">
+          <button mat-mini-fab color="primary" aria-label="Example icon button with a menu icon">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+        <div class="example-button-container">
+          <button mat-mini-fab color="warn" aria-label="Example icon button with a plus one icon">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="mat-body-1 info-empty" *ngIf="posts.length <= 0">Not Post added yet</p>
